# markdown-viewer

./: .gitignore  CLAUDE.md  HELP.md  MarkdownViewer.vbs  README.md  build.bat  build_optimized.bat  markdown-viewer.spec  pyproject.toml  run.bat
.claude/: settings.local.json
doc/: ARCHITECTURE.md  sample.csv  sample.md  sample.py  sample.xml
doc/spec/: architecture.md  components.md  development.md  features.md  index.md  overview.md  ui-style.md
scripts/: build.bat  create_shortcut.ps1  increment_version.py  markdown_viewer.spec
src/: main.py  style.css
src/templates/: list_view.html  markdown.html
